--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "rn_redux_4cursos",
-  "displayName": "rn_redux_4cursos",
+  "name": "redux-4vientos-cursos-reactnative",
+  "displayName": "redux-4vientos-cursos-reactnative",
   "expo": {
-    "name": "rn_redux_4cursos",
-    "slug": "rn_redux_4cursos",
+    "name": "redux-4vientos-cursos-reactnative",
+    "slug": "redux-4vientos-cursos-reactnative",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
